2005-02-02  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/treeview.hg:
	_connect_auto_store_editable_signal(): Use an intermediate 
	function pointer, because the IRIX MipsPro compiler needs that. 

2005-02-01  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/src/treeview.hg, colorselection.ccg: Remove the #ifdefs for AIX, 
 	because sigc::bind now works on AIX.

2005-02-01  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/clipboard/ideal/examplewindow.cc: 
	on_clipboard_received_targets(). Use targets = targets_array instead 
	of targets(targets_array). The IRIX MipsPro compiler needs this, 
	maybe because of the ustring-std::string conversion. We should 
	maybe use ustring anyway.

2.4.10:

2005-01-25  Murray Cumming  <murrayc@murrayc.com>
  
 	* gtk/src/colorselection.hg: set_change_pallete_hook(): On AIX, #ifdef 
 	out the part that uses sigc::bind, which does not work with the AIX 
 	xlC compiler. This method will be broken of that platform, but it is 
 	rarely used anyway.
 	* demos/gtk-demo/demowindow.cc: SUN Forte, AIX, and Tru64 have the 
 	problem with flockfile and funlockfile - configure finds it but the 
 	compiler can not find it while compiling demowindow.cc. #undef 
 	HAVE_FLOCKFILE and HAVE_FUNLOCKFILE for now, so that it builds on 
 	those platforms.

2005-01-25  Murray Cumming  <murrayc@murrayc.com>
  
 	* configure.in, Makefile.am: Add --disable-demos configure option, 
 	by plors in bug #160756. This is needed because AIX does not support 
	sigc::bind at all and the demos would be quite unreadable if we 
 	worked around that. This way, at least gtkmm can be installed on AIX.

2005-01-25  Murray Cumming  <murrayc@murrayc.com>
 
 	* examples/book/input/main.cc: Do not use O_NONBLOCK, because the 
 	example is meant to be blocking. As advised by Chris Vine.
 
2005-01-25  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/src/treeview.hg: Use nested sigc::bind<-1>s instead of 
 	sigc::bind(), because the Tru64 compiler needs the extra hint.